@@ -45,7 +45,6 @@ dependencies {
   tckTestClasses("javax.cache:cache-tests:$jcacheTckVersion:tests") {
     transitive = false
   }
-  testCompile project(path: ':xml', configuration: 'testArchives')
 }
 
 javadoc {
@@ -58,12 +57,6 @@ jar {
     'Import-Package': 'javax.cache.*;resolution:=optional, *',
     'Service-Component': 'OSGI-INF/*.xml'
   )
-}
-
-test {
-  if (testJava.javaVersion.isJava9Compatible()) {
-    jvmArgs += ['--add-modules', 'java.xml.bind']
-  }
 }
 
 task unpackTckTests(type: Copy) {
