@@ -31,19 +31,14 @@ dependencies {
   }
   compileOnly 'org.osgi:org.osgi.service.component.annotations:1.3.0'
   testImplementation project(':core-spi-test')
-  testCompile project(path: ':xml', configuration: 'testArchives')
+  testImplementation 'org.xmlunit:xmlunit-core:2.6.0'
+  testImplementation 'org.xmlunit:xmlunit-matchers:2.6.0'
 }
 
 // For EhPomMangle
 dependencies {
   pomOnlyCompile "org.ehcache:ehcache:$parent.baseVersion"
   pomOnlyProvided 'javax.transaction:jta:1.1', 'org.codehaus.btm:btm:2.1.4'
-}
-
-test {
-  if (testJava.javaVersion.isJava9Compatible()) {
-    jvmArgs += ['--add-modules', 'java.xml.bind']
-  }
 }
 
 jar {
